Admin added and security improved